fixed bottom layout issue

--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ td {
 	white-space: pre-wrap;
 }
 h1 {
-	display: inline;
-	font-size: 100%;
+display: inline;
+font-size: 25pt;
+
 }
 del {
 	text-decoration: none;
@@ -92,7 +93,6 @@ ins {
 	width:100%;
 	height:190px;
 	overflow-x: scroll;
-	padding-top: 20px;
 	
 }
 .eventDiv{
@@ -120,12 +120,13 @@ ins {
 	width:100%;
 	height:20px;
 	margin-top:0px;
+	margin-bottom: 2px;
 }
 
 #allEvents{
 	width: 10600px;
 	overflow-x: scroll;
-	margin-top: 7px;
+
 }
 
 .placeHolder{
